--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,17 @@
     <repositories>
     </repositories>
 
+    <properties>
+        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <org-awaitility.version>4.0.3</org-awaitility.version>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.12</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
@@ -39,6 +49,18 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${org-awaitility.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--MBassador for Asynchronous Internal Messaging-->
         <dependency>
             <groupId>net.engio</groupId>
@@ -53,6 +75,13 @@
             <version>0.13</version>
         </dependency>
         <!--Trading Algorithm Dependency-->
+        <!--Crypto Vault-->
+        <dependency>
+            <groupId>com.bol</groupId>
+            <artifactId>spring-data-mongodb-encrypt</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+        <!--Crypto Vault-->
         <!--Market APIs-->
         <dependency>
             <groupId>com.binance.api</groupId>
@@ -65,6 +94,19 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <!-- Force alphabetical order to have a reproducible build -->
+                    <runOrder>alphabetical</runOrder>
+                    <excludes>
+                        <exclude>**/*IT*</exclude>
+                        <exclude>**/*IntTest*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
